beag -> anbheag style
git-svn-id: file:///home/kps/seal/gitemp/aimsigh/trunk@22 a6873ebf-e95b-465c-b432-0e6dd3dc36f7

--- a/cabhair.html
+++ b/cabhair.html
@@ -25,7 +25,7 @@ correctly, e.g. GAELIC-L archives.
 <li>"Extras": links to other lexical resources at top of results page
 </ul>
 
-<p class="beag">
+<p class="anbheag">
 Cóipcheart © 2005 <a href="/index.html">Kevin P. Scannell</a>. Gach ceart ar cosnamh.<br>
 Déan teagmháil linn ag <a href="mailto:eolas@aimsigh.com">eolas@aimsigh.com</a>.
 </p>
