--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="author" content="Kevin P. Scannell">
     <link rel="stylesheet" href="aimsigh.css" type="text/css">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   </head>
 
   <body class="laraithe">
