update my homepage
git-svn-id: file:///home/kps/seal/gitemp/aimsigh/trunk@62 a6873ebf-e95b-465c-b432-0e6dd3dc36f7

--- a/index.html
+++ b/index.html
@@ -32,6 +32,6 @@
       </table>
     </form>
 
-    <p class="anbheag">Cóipcheart © 2005 <a href="/index.html">Kevin P. Scannell</a>. Gach ceart ar cosnamh.<br>Déan teagmháil linn ag <a href="mailto:eolas@aimsigh.com">eolas@aimsigh.com</a>.</p>
+    <p class="anbheag">Cóipcheart © 2005 <a href="http://borel.slu.edu/index.html">Kevin P. Scannell</a>. Gach ceart ar cosnamh.<br>Déan teagmháil linn ag <a href="mailto:eolas@aimsigh.com">eolas@aimsigh.com</a>.</p>
   </body>
 </html>
