--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
         "http://www.w3.org/TR/html4/strict.dtd">
 <html lang="ga">
   <head>
-    <title>aimsigh.com</title>
+    <title>aimsigh.com: Cuardach L&aacute;n-Ghaeilge</title>
     <meta http-equiv="Content-Language" content="ga">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="author" content="Kevin P. Scannell">
