--- a/cabhair.html
+++ b/cabhair.html
@@ -18,6 +18,7 @@ Navigation column, like my home page?
 <ul>
 <li>Only Irish docs.   Give e.g. of searchable words like "cion"
 where Google hits are useless.
+<li>Stuff that Google doesn't have!
 <li>Non-standard representations of fadas (slaiseanna) indexed
 correctly, e.g. GAELIC-L archives.
 <li>Non-standard spellings and misspellings (inc. missing fadas) indexed.
@@ -26,8 +27,35 @@ correctly, e.g. GAELIC-L archives.
 <li>"Extras": links to other lexical resources at top of results page
 </ul>
 
+<p>
+Search syntax:
+Boolean operators.  AGUS, NO, GAN.  By default, AGUS.
+Must use uppercase with these.  
+
+"foo bar"
+"bar foo"
+"foo AND bar"
+
+
+Simple GAN example.
+
+Simple NO example.
+
+Parentheses can be used to group searches
+
+"GAN (foo AND bar)"
+
+No wildcards.
+
+To search for a phrase, use double quotes, e.g.
+
+"Kevin Scannell"
+"clapsholas Ceilteach"
+
+</p>
+
 <p class="anbheag">
-Cóipcheart © 2005 <a href="/index.html">Kevin P. Scannell</a>. Gach ceart ar cosnamh.<br>
+Cóipcheart © 2005 <a href="http://borel.slu.edu/index.html">Kevin P. Scannell</a>. Gach ceart ar cosnamh.<br>
 Déan teagmháil linn ag <a href="mailto:eolas@aimsigh.com">eolas@aimsigh.com</a>.
 </p>
 </body>
