--- a/eolas.html
+++ b/eolas.html
@@ -28,9 +28,13 @@ hits are links to the English version.
 Foras na Gaeilge in google returns www.gaeilge.ie,
 which is a "choose your language" page; the Gaeilgeoir
 wants the default1 page directly.
+<li>English titles of Irish docs are translated to Irish where possible
 <li>Non-standard representations of fadas indexed
 correctly, e.g. slaiseanna in the GAELIC-L archives, but also
 instances where they're left out entirely.
+<li>Intelligent (de)capitalization; search for "t-acht"
+and get "tAcht", search for "tacht" and you *won't* get 
+"tAcht" unlike Google!
 <li>Non-standard spellings and misspellings indexed.  Just select
 the box Focail Neamh...  Link to help.
 <li>Inflected forms.  Link to help.
@@ -46,7 +50,7 @@ focloir eolaiochta from acmhainn.ie.
 <li>We're in a unique position as the creator and maintainer of
 nearly all advanced language technology for Irish: 
 GaelSpell word list, Gramadóir, etc.
-<li>Hand-curated doc db.
+<li>Hand-curated doc db.    Index lots of stuff Google doesn't... (e.g.'s?)
 </ul>
 
 <p class="anbheag">
