this is now a www.aimsigh.com file
git-svn-id: file:///home/kps/seal/gitemp/aimsigh/trunk@84 a6873ebf-e95b-465c-b432-0e6dd3dc36f7

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <body class="laraithe">
     <img src="aimsigh.png" alt="aimsigh.com">
-    <form class="laraithe" action="/cgi-bin/aimsigh.cgi" method="POST">
+    <form class="laraithe" action="/cgi-bin/a.cgi" method="POST">
       <input size="50" name="ionchur"><br>
       <input type="submit" name="foirm" value="Aimsigh é"><br><br>
       <input type="hidden" name="feicthe" value="0">
