--- a/index.html
+++ b/index.html
@@ -6,32 +6,12 @@
     <meta http-equiv="Content-Language" content="ga">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="author" content="Kevin P. Scannell">
-    <link rel="stylesheet" href="aimsigh.css" type="text/css">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="/aimsigh/aimsigh.css" type="text/css">
+    <link rel="shortcut icon" href="/aimsigh/favicon.ico" type="image/x-icon">
   </head>
 
-  <body class="laraithe">
-    <img src="aimsigh.png" alt="aimsigh.com">
-    <form class="laraithe" action="/cgi-bin/a.cgi" method="POST">
-      <input size="50" name="ionchur"><br>
-      <input type="submit" name="foirm" value="Aimsigh é"><br><br>
-      <input type="hidden" name="feicthe" value="0">
-      <table class="bloclaraithe">
-        <tr class="cle"><td>
-        <input type="radio" name="claochlu" value="NN" checked>Focail gan athrú [<a href="cabhair.html" class="beag">Cad é seo?</a>]
-        </td></tr>
-        <tr class="cle"><td>
-        <input type="radio" name="claochlu" value="YN">Focail chlaochlaithe [<a href="cabhair.html" class="beag">Cad é seo?</a>]
-        </td></tr>
-        <tr class="cle"><td>
-        <input type="radio" name="claochlu" value="YY">Focail chlaochlaithe infhillte [<a href="cabhair.html" class="beag">Cad é seo?</a>]
-        </td></tr>
-        <tr class="cle"><td>
-        <input type="checkbox" name="neamhchaighdean" value="neamhchaighdean">Litriú neamhchaighdeánach [<a href="cabhair.html" class="beag">Cad é seo?</a>]
-        </td></tr>
-      </table>
-    </form>
-
-    <p class="anbheag">Cóipcheart © 2005 <a href="http://borel.slu.edu/index.html">Kevin P. Scannell</a>. Gach ceart ar cosnamh.<br>Déan teagmháil linn ag <a href="mailto:eolas@aimsigh.com">eolas@aimsigh.com</a>.</p>
-  </body>
+  <frameset rows="28%,72%">
+      <frame src="index.html" name="foirm">
+      <frame name="torthai">
+  </frameset>
 </html>
