needs to point to foirm.html !
git-svn-id: file:///home/kps/seal/gitemp/aimsigh/trunk@93 a6873ebf-e95b-465c-b432-0e6dd3dc36f7

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
 
   <frameset rows="28%,72%">
-      <frame src="index.html" name="foirm">
+      <frame src="foirm.html" name="foirm">
       <frame name="torthai">
   </frameset>
 </html>
