less real estate for search box.  Also a bugfix for horiz scrollbar in IE: see http://bugs.sun.com/bugdatabase/view_bug.do?bug_id=4852280
git-svn-id: file:///home/kps/seal/gitemp/aimsigh/trunk@94 a6873ebf-e95b-465c-b432-0e6dd3dc36f7

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link rel="shortcut icon" href="/aimsigh/favicon.ico" type="image/x-icon">
   </head>
 
-  <frameset rows="28%,72%">
-      <frame src="foirm.html" name="foirm">
+  <frameset rows="24%,76%">
+      <frame src="foirm.html" name="foirm" scrolling="yes">
       <frame name="torthai">
   </frameset>
 </html>
