main change is to comment out the DOCTYPE which is a better workaround for the IE scrollbar bug (scrolling=yes) shows a shaded horiz scrollbar in FF 1.5+
git-svn-id: file:///home/kps/seal/gitemp/aimsigh/trunk@98 a6873ebf-e95b-465c-b432-0e6dd3dc36f7

--- a/foirm.html
+++ b/foirm.html
@@ -1,5 +1,6 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN"
+<!-- <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN"
         "http://www.w3.org/TR/html4/strict.dtd">
+IE scrollbar bug	-->
 <html lang="ga">
   <head>
     <title>aimsigh.com: Cuardach L&aacute;n-Ghaeilge</title>
@@ -11,9 +12,9 @@
   </head>
 
   <body class="laraithe">
-    <form class="laraithe" action="http://borel.slu.edu/cgi-bin/aimsigh.cgi" method="POST" target="torthai">
+    <form action="http://borel.slu.edu/cgi-bin/aimsigh.cgi" method="POST" target="torthai">
       <table class="bloclaraithe"><tr>
-      <td>
+      <td class="laraithe">
       <div><img src="/aimsigh/aimsigh.png" alt="aimsigh.com"></div>
       <div>
         <input size="30" name="ionchur"><br>
@@ -22,7 +23,7 @@
       </div>
       </td>
       <td>
-      <table class="bloclaraithe">
+      <table class="leathan">
         <tr class="cle"><td>
         <input type="radio" name="claochlu" value="NN" checked>Focail gan athrú [<a href="cabhair.html" class="beag">Cad é seo?</a>]
         </td></tr>
