see fix in foirm.html
git-svn-id: file:///home/kps/seal/gitemp/aimsigh/trunk@99 a6873ebf-e95b-465c-b432-0e6dd3dc36f7

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
 
   <frameset rows="24%,76%">
-      <frame src="foirm.html" name="foirm" scrolling="yes">
+      <frame src="foirm.html" name="foirm">
       <frame name="torthai">
   </frameset>
 </html>
