auto-focus in box
git-svn-id: file:///home/kps/seal/gitemp/aimsigh/trunk@101 a6873ebf-e95b-465c-b432-0e6dd3dc36f7

--- a/foirm.html
+++ b/foirm.html
@@ -11,13 +11,13 @@ IE scrollbar bug	-->
     <link rel="shortcut icon" href="/aimsigh/favicon.ico" type="image/x-icon">
   </head>
 
-  <body class="laraithe">
-    <form action="http://borel.slu.edu/cgi-bin/aimsigh.cgi" method="POST" target="torthai">
+  <body onLoad="focus();priomh.ionchur.focus()" class="laraithe">
+    <form action="http://borel.slu.edu/cgi-bin/aimsigh.cgi" method="POST" target="torthai" name="priomh">
       <table class="bloclaraithe"><tr>
       <td class="laraithe">
       <div><img src="/aimsigh/aimsigh.png" alt="aimsigh.com"></div>
       <div>
-        <input size="30" name="ionchur"><br>
+        <input type="text" size="30" name="ionchur"><br>
         <input type="submit" name="foirm" value="Aimsigh é">
         <input type="hidden" name="feicthe" value="0">
       </div>
