corrected doctype, added a noframes element for lynx
git-svn-id: file:///home/kps/seal/gitemp/aimsigh/trunk@103 a6873ebf-e95b-465c-b432-0e6dd3dc36f7

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN"
-        "http://www.w3.org/TR/html4/strict.dtd">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Frameset//EN"
+"http://www.w3.org/TR/html4/frameset.dtd">
 <html lang="ga">
   <head>
     <title>aimsigh.com: Cuardach L&aacute;n-Ghaeilge</title>
@@ -13,5 +13,10 @@
   <frameset rows="24%,76%">
       <frame src="foirm.html" name="foirm">
       <frame name="torthai">
+      <noframes>
+        <body>
+	  <a href="foirm.html">Cuardach aimsigh.com</a>
+	</body>
+      </noframes>
   </frameset>
 </html>
