--- a/eolas.html
+++ b/eolas.html
@@ -37,8 +37,11 @@ and get "tAcht", search for "tacht" and you *won't* get
 "tAcht" unlike Google!
 <li>Non-standard spellings and misspellings indexed.  Just select
 the box Focail Neamh...  Link to help.
+Helps if you don't know how to spell something (e.g.!)
 <li>Inflected forms.  Link to help.
 <li>Mutated forms. Link to help.
+<li>Automatic translation of some boilerplate titles
+to reduce the amount of English one is faced with
 <li>Page ranking algorithm takes into account only
 links from other Irish pages; give an example where Google ranks
 a useless learners page for some common word like "Eolaiocht";
