_top added to help links
git-svn-id: file:///home/kps/seal/gitemp/aimsigh/trunk@113 a6873ebf-e95b-465c-b432-0e6dd3dc36f7

--- a/foirm.html
+++ b/foirm.html
@@ -25,16 +25,16 @@ IE scrollbar bug	-->
       <td>
       <table class="leathan">
         <tr class="cle"><td>
-        <input type="radio" name="claochlu" value="NN" checked>Focail gan athrú [<a href="cabhair.html" class="beag">Cad é seo?</a>]
+        <input type="radio" name="claochlu" value="NN" checked>Focail gan athrú [<a href="cabhair.html" target="_top" class="beag">Cad é seo?</a>]
         </td></tr>
         <tr class="cle"><td>
-        <input type="radio" name="claochlu" value="YN">Focail chlaochlaithe [<a href="cabhair.html" class="beag">Cad é seo?</a>]
+        <input type="radio" name="claochlu" value="YN">Focail chlaochlaithe [<a href="cabhair.html" target="_top" class="beag">Cad é seo?</a>]
         </td></tr>
         <tr class="cle"><td>
-        <input type="radio" name="claochlu" value="YY">Focail chlaochlaithe infhillte [<a href="cabhair.html" class="beag">Cad é seo?</a>]
+        <input type="radio" name="claochlu" value="YY">Focail chlaochlaithe infhillte [<a href="cabhair.html" target="_top" class="beag">Cad é seo?</a>]
         </td></tr>
         <tr class="cle"><td>
-        <input type="checkbox" name="neamhchaighdean" value="neamhchaighdean">Litriú neamhchaighdeánach [<a href="cabhair.html" class="beag">Cad é seo?</a>]
+        <input type="checkbox" name="neamhchaighdean" value="neamhchaighdean">Litriú neamhchaighdeánach [<a href="cabhair.html" target="_top" class="beag">Cad é seo?</a>]
         </td></tr>
       </table>
       </td>
@@ -42,6 +42,6 @@ IE scrollbar bug	-->
       </table>
     </form>
 
-    <div class="anbheag">Cóipcheart © 2005 <a href="http://borel.slu.edu/index.html">Kevin P. Scannell</a>. Gach ceart ar cosnamh.  Déan teagmháil linn ag <a href="mailto:eolas@aimsigh.com">eolas@aimsigh.com</a>.</p>
+    <div class="anbheag">Cóipcheart © 2005 <a href="http://borel.slu.edu/index.html" target="_top">Kevin P. Scannell</a>. Gach ceart ar cosnamh.  Déan teagmháil linn ag <a href="mailto:eolas@aimsigh.com">eolas@aimsigh.com</a>.</p>
   </body>
 </html>
