backing out this stupid safari fix - doesn't work since the whole point is that Safari doesn't work nicely with "back" and "onload" anyway
git-svn-id: file:///home/kps/seal/gitemp/aimsigh/trunk@115 a6873ebf-e95b-465c-b432-0e6dd3dc36f7

--- a/index.html
+++ b/index.html
@@ -10,15 +10,9 @@
     <meta name="author" content="Kevin P. Scannell">
     <link rel="stylesheet" href="/aimsigh/aimsigh.css" type="text/css">
     <link rel="shortcut icon" href="/aimsigh/favicon.ico" type="image/x-icon">
-    <script type="text/javascript">
-      function breakOut() {
-        if (self != top)
-            window.open("http://www.aimsigh.com/","_top","");
-      }
-    </script>
   </head>
 
-  <frameset rows="24%,76%" onLoad="breakOut()">
+  <frameset rows="24%,76%">
       <frame src="foirm.html" name="foirm">
       <frame name="torthai">
       <noframes>
