GET not POST follows standards, and also allows "open frame in new window" !
git-svn-id: file:///home/kps/seal/gitemp/aimsigh/trunk@120 a6873ebf-e95b-465c-b432-0e6dd3dc36f7

--- a/foirm.html
+++ b/foirm.html
@@ -12,7 +12,7 @@ IE scrollbar bug	-->
   </head>
 
   <body onLoad="focus();priomh.ionchur.focus()" class="laraithe">
-    <form action="http://borel.slu.edu/cgi-bin/aimsigh.cgi" method="POST" target="torthai" name="priomh">
+    <form action="http://borel.slu.edu/cgi-bin/aimsigh.cgi" method="GET" target="torthai" name="priomh">
       <table class="bloclaraithe"><tr>
       <td class="laraithe">
       <div><img src="/aimsigh/aimsigh.png" alt="aimsigh.com"></div>
