A first attempt at making these presentable
git-svn-id: file:///home/kps/seal/gitemp/aimsigh/trunk@122 a6873ebf-e95b-465c-b432-0e6dd3dc36f7

--- a/cabhair.html
+++ b/cabhair.html
@@ -2,40 +2,48 @@
         "http://www.w3.org/TR/html4/strict.dtd">
 <html lang="ga">
 <head>
-  <title>Maidir le aimsigh.com</title>
+  <title>aimsigh.com: Cabhair</title>
   <meta http-equiv="Content-Language" content="ga">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <meta name="description" content="Inneall Cuardaigh don Ghréasán Gaeilge: Leathanach Cabhrach">
+  <meta name="keywords" content="cuardach, cuardaigh, aimsigh, gréasán, inneall cuardaigh, Gaeilge, Éire, search, search engine, Irish, Ireland">
   <meta name="author" content="Kevin P. Scannell">
-  <link rel="stylesheet" href="aimsigh.css" type="text/css">
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="/aimsigh/aimsigh.css" type="text/css">
+  <link rel="shortcut icon" href="/aimsigh/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
+<div class="content">
+<h1>Cuardach Simplí</h1>
 <p>
-Navigation column, like my home page?
+Basic searching works just like most other 
+search engines: enter your search terms into the
+box on the main page and then press "Enter" or
+click "Aimsigh é".  By default, aimsigh.com
+finds any Irish language documents that contain
+all of your search terms.
 </p>
 
-<ul>
-<li>Only Irish docs.   Give e.g. of searchable words like "cion"
-where Google hits are useless.
-<li>Stuff that Google doesn't have!
-<li>Non-standard representations of fadas (slaiseanna) indexed
-correctly, e.g. GAELIC-L archives.
-<li>Non-standard spellings and misspellings (inc. missing fadas) indexed.
-<li>Inflected forms.  Link to help.
-<li>Mutated forms. Link to help.
-<li>"Extras": links to other lexical resources at top of results page
-</ul>
-
+<hr>
+<h1>Cuardach Cliste</h1>
 <p>
-Search syntax:
+The aimsigh.com engine has a detailed understanding
+of the Irish language and you can exploit this 
+to search more effectively.  
+
+For example, if you want to search for documents
+about 
+</p>
+
+<hr>
+<h1>Oibreoirí</h1>
+<p>
 Boolean operators.  AGUS, NO, GAN.  By default, AGUS.
 Must use uppercase with these.  
 
 "foo bar"
 "bar foo"
 "foo AND bar"
-
 
 Simple GAN example.
 
@@ -51,12 +59,19 @@ To search for a phrase, use double quotes, e.g.
 
 "Kevin Scannell"
 "clapsholas Ceilteach"
-
 </p>
 
+<hr>
 <p class="anbheag">
 Cóipcheart © 2005 <a href="http://borel.slu.edu/index.html">Kevin P. Scannell</a>. Gach ceart ar cosnamh.<br>
 Déan teagmháil linn ag <a href="mailto:eolas@aimsigh.com">eolas@aimsigh.com</a>.
 </p>
+</div>
+<div class="navigation">
+<a href="index.html">Cuardaigh aimsigh.com</a><br>
+Leathanach Cabhrach<br>
+<a href="eolas.html">Description in English</a><br>
+<a href="http://borel.slu.edu/">An Forbróir</a><br>
+</div>
 </body>
 </html>
