First uploadable versions of these two files
git-svn-id: file:///home/kps/seal/gitemp/aimsigh/trunk@127 a6873ebf-e95b-465c-b432-0e6dd3dc36f7

--- a/cabhair.html
+++ b/cabhair.html
@@ -14,53 +14,76 @@
 
 <body>
 <div class="content">
-<h1>Cuardach Simplí</h1>
+<h1>Roghanna Teangeolaíochta</h1>
 <p>
-Basic searching works just like most other 
-search engines: enter your search terms into the
-box on the main page and then press "Enter" or
-click "Aimsigh é".  By default, aimsigh.com
-finds any Irish language documents that contain
-all of your search terms.
+Chun cuardach simplí a dhéanamh, cuir focal (nó focail) isteach sa bhosca
+ar an bpríomhleathanach agus cliceáil "Aimsigh é" (nó brúigh
+an eochair "Enter" ar do mhéarchlár).  De réir réamhshocraithe,
+aimseofar gach cáipéis Ghaeilge a bhfuil do théarmaí inti
+agus atá ar fáil ar an nGréasán faoi láthair.
+</p>
+
+<p>
+Má roghnaíonn tú an cnaipe <b>Focail chlaochlaithe</b> ar an
+bpríomhleathanach, agus déanann tú cuardach ar an bhfocal <i>deirfiúr</i>,
+aimseofar cáipéisí ina bhfuil ceann de na focail
+<i>deirfiúr</i>, <i>dheirfiúr</i>, nó <i>ndeirfiúr</i>.
+</p>
+
+<p>
+Má dhéanann tú cuardach ar an bhfocal céanna
+ach roghnaíonn tú an cnaipe <b>Focail chlaochlaithe infhillte</b>,
+aimseofar cáipéisí ina bhfuil ceann de na trí fhocal thuasluaite,
+nó <i>deirféar</i>, <i>dheirféar</i>, <i>ndeirféar</i>.
+<i>deirfiúracha</i>, <i>dheirfiúracha</i>, nó <i>ndeirfiúracha</i>.
+</p>
+
+<p>
+Anois, tabhair faoi deara gur féidir an bosca <b>Litriú neamhchaighdeánach</b>
+a roghnú go neamhspleách ar na cnaipí eile.  Má roghnaíonn tú an bosca seo
+in éineacht le "Focail gan athrú", aimseofar na téarmaí <i>deirfiúr</i>,
+<i>driofúr</i>, <i>deirbhshiúr</i>, <i>driféar</i>, <i>deirbhshiair</i>, etc.
+Ar ndóigh, gheobhaidh tú na torthaí is leithne trí
+<b>Litriú neamhchaighdeánach</b> a roghnú in éineacht le
+<b>Focail chlaochlaithe infhillte</b>: gach foirm thuas agus 
+<i>deirbhshiúr</i>, <i>dheirbhshiúr</i>, <i>ndeirbhshiúr</i>,
+<i>deirbhsheathar</i>, <i>dheirbhsheathar</i>, <i>ndeirbhsheathar</i>,
+<i>deirbhsheathracha</i>, <i>dheirbhsheathracha</i>, <i>ndeirbhsheathracha</i>,
+<i>driofúr</i>, <i>dhriofúr</i>, <i>ndriofúr</i>, etc. etc.
 </p>
 
 <hr>
-<h1>Cuardach Cliste</h1>
+<h1>Oibreoirí Loighciúla</h1>
 <p>
-The aimsigh.com engine has a detailed understanding
-of the Irish language and you can exploit this 
-to search more effectively.  
+Tacaíonn aimsigh.com leis na gnáthoibreoirí loighciúla:
+<b><i>AGUS, NÓ, GAN</i></b> (scríofa sa chás uachtair agus
+as Gaeilge!).  Mar shampla, aimsíonn<br><br>
+<b><i>cnuasach AGUS filíocht</i></b><br><br>
+gach cáipéis Ghaeilge a bhfuil "cnuasach" agus "filíocht" araon inti.
+Ós rud é gur "<b><i>AGUS</i></b>" an t-oibreoir réamhshocraithe é, is ionann
+an cuardach thuas agus:<br><br>
+<b><i>cnuasach filíocht</i></b><br><br>
 
-For example, if you want to search for documents
-about 
-</p>
+Má iontrálann tú<br><br>
+<b><i>oladhath NÓ uiscedhath</i></b><br><br>
+aimseofar gach cáipéis Ghaeilge ina bhfuil ceann den dá fhocal (nó iad araon).
 
-<hr>
-<h1>Oibreoirí</h1>
-<p>
-Boolean operators.  AGUS, NO, GAN.  By default, AGUS.
-Must use uppercase with these.  
+Chun téarmaí áirithe a fhágáil as na torthaí, úsáid
+"<b><i>GAN</i></b>"; mar shampla<br><br>
+<b><i>cruach GAN Phádraig</i></b><br><br>
+má tá suim agat i gcruach (an miotal).
 
-"foo bar"
-"bar foo"
-"foo AND bar"
+Is féidir freisin téarmaí a ghrúpáil idir lúibíní mar a leanas:<br><br>
+<b><i>Foras Éirinn GAN (Feasa AGUS Keating)</i></b><br><br>
 
-Simple GAN example.
+Agus, mar is gnách le hinnill chuardaigh eile,
+úsáid comharthaí athfhriotail chun
+frása beacht a aimsiú:<br><br>
+<b><i>"Ros na Rún"</i></b><br><br>
+nó:<br><br>
+<b><i>"Brian Ó Cuív"</i></b><br><br>
 
-Simple NO example.
-
-Parentheses can be used to group searches
-
-"GAN (foo AND bar)"
-
-No wildcards.
-
-To search for a phrase, use double quotes, e.g.
-
-"Kevin Scannell"
-"clapsholas Ceilteach"
-</p>
-
+Ní thacaítear le saoróga (*,?,srl.) faoi láthair.
 <hr>
 <p class="anbheag">
 Cóipcheart © 2005 <a href="http://borel.slu.edu/index.html">Kevin P. Scannell</a>. Gach ceart ar cosnamh.<br>
@@ -68,10 +91,10 @@ Déan teagmháil linn ag <a href="mailto:eolas@aimsigh.com">eolas@aimsigh.com</a
 </p>
 </div>
 <div class="navigation">
-<a href="index.html">Cuardaigh aimsigh.com</a><br>
-Leathanach Cabhrach<br>
-<a href="eolas.html">Description in English</a><br>
-<a href="http://borel.slu.edu/">An Forbróir</a><br>
+<a href="index.html">Cuardach</a><br>
+Cabhair<br>
+<a href="eolas.html">English</a><br>
+<a href="http://borel.slu.edu/">Forbróir</a><br>
 </div>
 </body>
 </html>
