--- a/cabhair.html
+++ b/cabhair.html
@@ -42,14 +42,14 @@ nó <i>deirféar</i>, <i>dheirféar</i>, <i>ndeirféar</i>.
 Anois, tabhair faoi deara gur féidir an bosca <b>Litriú neamhchaighdeánach</b>
 a roghnú go neamhspleách ar na cnaipí eile.  Má roghnaíonn tú an bosca seo
 in éineacht le "Focail gan athrú", aimseofar na téarmaí <i>deirfiúr</i>,
-<i>driofúr</i>, <i>deirbhshiúr</i>, <i>driféar</i>, <i>deirbhshiair</i>, etc.
+<i>driofúr</i>, <i>deirbhshiúr</i>, <i>driféar</i>, <i>deirbhshiair</i>, srl.
 Ar ndóigh, gheobhaidh tú na torthaí is leithne trí
 <b>Litriú neamhchaighdeánach</b> a roghnú in éineacht le
 <b>Focail chlaochlaithe infhillte</b>: gach foirm thuas agus 
 <i>deirbhshiúr</i>, <i>dheirbhshiúr</i>, <i>ndeirbhshiúr</i>,
 <i>deirbhsheathar</i>, <i>dheirbhsheathar</i>, <i>ndeirbhsheathar</i>,
 <i>deirbhsheathracha</i>, <i>dheirbhsheathracha</i>, <i>ndeirbhsheathracha</i>,
-<i>driofúr</i>, <i>dhriofúr</i>, <i>ndriofúr</i>, etc. etc.
+<i>driofúr</i>, <i>dhriofúr</i>, <i>ndriofúr</i>, srl. srl.
 </p>
 
 <hr>
