--- a/cabhair.html
+++ b/cabhair.html
@@ -41,7 +41,7 @@ nó <i>deirféar</i>, <i>dheirféar</i>, <i>ndeirféar</i>.
 <p>
 Anois, tabhair faoi deara gur féidir an bosca <b>Litriú neamhchaighdeánach</b>
 a roghnú go neamhspleách ar na cnaipí eile.  Má roghnaíonn tú an bosca seo
-in éineacht le "Focail gan athrú", aimseofar na téarmaí <i>deirfiúr</i>,
+in éineacht le <b>Focail gan athrú</b>, aimseofar na téarmaí <i>deirfiúr</i>,
 <i>driofúr</i>, <i>deirbhshiúr</i>, <i>driféar</i>, <i>deirbhshiair</i>, srl.
 Ar ndóigh, gheobhaidh tú na torthaí is leithne trí
 <b>Litriú neamhchaighdeánach</b> a roghnú in éineacht le
