entities are allowed in meta content, and apparently yahoo chokes on plain utf-8 (but only sometimes?)
git-svn-id: file:///home/kps/seal/gitemp/aimsigh/trunk@138 a6873ebf-e95b-465c-b432-0e6dd3dc36f7

--- a/cabhair.html
+++ b/cabhair.html
@@ -5,8 +5,8 @@
   <title>aimsigh.com: Cabhair</title>
   <meta http-equiv="Content-Language" content="ga">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <meta name="description" content="Inneall Cuardaigh don Ghréasán Gaeilge: Leathanach Cabhrach">
-  <meta name="keywords" content="cuardach, cuardaigh, aimsigh, gréasán, inneall cuardaigh, Gaeilge, Éire, search, search engine, Irish, Ireland">
+  <meta name="description" content="Inneall Cuardaigh don Ghr&eacute;as&aacute;n Gaeilge: Leathanach Cabhrach">
+  <meta name="keywords" content="cuardach, cuardaigh, aimsigh, gr&eacute;as&aacute;n, inneall cuardaigh, Gaeilge, &Eacute;ire, search, search engine, Irish, Ireland">
   <meta name="author" content="Kevin P. Scannell">
   <link rel="stylesheet" href="/aimsigh/aimsigh.css" type="text/css">
   <link rel="shortcut icon" href="/aimsigh/favicon.ico" type="image/x-icon">
