--- a/eolas.html
+++ b/eolas.html
@@ -6,7 +6,7 @@
   <meta http-equiv="Content-Language" content="en">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="description" content="Detailed description of the aimsigh.com search engine in English">
-  <meta name="keywords" content="cuardach, cuardaigh, aimsigh, gréasán, inneall cuardaigh, Gaeilge, Éire, search, search engine, Irish, Ireland">
+  <meta name="keywords" content="cuardach, cuardaigh, aimsigh, gr&eacute;as&aacute;n, inneall cuardaigh, Gaeilge, &Eacute;ire, search, search engine, Irish, Ireland">
   <link rel="stylesheet" href="/aimsigh/aimsigh.css" type="text/css">
   <link rel="shortcut icon" href="/aimsigh/favicon.ico" type="image/x-icon">
 </head>
