centering bug fixed
git-svn-id: file:///home/kps/seal/gitemp/aimsigh/trunk@145 a6873ebf-e95b-465c-b432-0e6dd3dc36f7

--- a/foirm.html
+++ b/foirm.html
@@ -23,7 +23,7 @@ IE scrollbar bug	-->
       </div>
       </td>
       <td>
-      <table class="leathan">
+      <table>
         <tr class="cle"><td>
         <input type="radio" name="claochlu" value="NN" checked>Focail gan athrú [<a href="cabhair.html" target="_top" class="beag">Cad é seo?</a>]
         </td></tr>
