more/better illustrations.
git-svn-id: file:///home/kps/seal/gitemp/aimsigh/trunk@153 a6873ebf-e95b-465c-b432-0e6dd3dc36f7

--- a/eolas.html
+++ b/eolas.html
@@ -90,9 +90,13 @@ on the main <i>aimsigh.com</i> page, and enters in word like
 <i>Gaeilge</i> or one
 of the non-standard spellings <i>Gaolainn, Gaedhilge, Gaedhilg, Gaedhealg, Gaedhealaing, Gaeilic, Gaoidhealg, Gaodhalainn, Gaelainn, Gaeluinn, ...</i>, etc.
 will be retrieved.  
+As an illustration, try a Google search for <i>"truailliú uafásach"</i>
+and then try <i>aimsigh.com</i> with the non-standard spelling box
+activated:<br><br>
+<b><i>"truailliú uafásach"</i></b>: <a href="http://www.google.com/search?q=%22truailli%C3%BA+uaf%C3%A1sach%22">Google</a>&nbsp;&nbsp;<a href="http://borel.slu.edu/cgi-bin/aimsigh.cgi?ionchur=%22truailli%C3%BA+uaf%C3%A1sach%22&feicthe=0&claochlu=NN&neamhchaighdean">aimsigh.com</a><br>
 </p>
 <p>
-A nice side-effect of this is that the standardization process
+A nice side-effect of this feature is that the standardization process
 also corrects common spelling errors, so if you can't remember
 how to spell <i>ionannas</i> and you search for <i>ionnanas</i>, you will
 still retrieve all documents containing the correct spelling.
@@ -118,10 +122,18 @@ initial capital on a (non-proper) noun in English.
 In other words, someone searching for information on lexicography
 (<i>foclóireacht</i>) would surely be just as happy
 to retrieve documents containing <i>fhoclóireacht</i> or <i>bhfoclóireacht</i>.
+</p>
+<p>
 This behavior can be achieved by selecting
 the button <i>Focail chlaochlaithe</i> (Mutated words) on
 the main <i>aimsigh.com</i> page (I generally select this button
-for all of my own searches).
+for all of my own searches).  For example, to find documents concerning
+the country of Sudan, one might search for the term <i>Súdáin</i>,
+but since this word generally follows the definite article in Irish,
+and is therefore prefixed with a "t", it is much more effective
+to search with <i>aimsigh.com</i>:
+<br><br>
+<b><i>Súdáin</i></b>: <a href="http://www.google.com/search?q=S%C3%BAd%C3%A1in">Google</a>&nbsp;&nbsp;<a href="http://borel.slu.edu/cgi-bin/aimsigh.cgi?ionchur=S%C3%BAd%C3%A1in&feicthe=0&claochlu=YN">aimsigh.com</a><br>
 </p>
 <p>
 <b>3. Inflectional morphology</b><br>
@@ -137,8 +149,15 @@ of these words (<i>ghaelscoil, ngaelscoil</i>, etc., nine words in all).
 Verbal morphology is even more complicated,
 with a single root word typically producing more than 50
 inflected/mutated forms.
+</p>
+<p>
 Stemmed searches can be performed by selecting
 the button <i>Focail chlaochlaithe infhillte</i> (Mutated and inflected words).
+For example, if you are interested in monetary policy, you would
+naturally try to search for <i>airgeadaíocht</i>; while Google returns 
+only a couple of results for this query, we get several hundred with the
+<i>aimsigh.com</i> stemming feature activated:<br><br>
+<b><i>airgeadaíocht</i></b>: <a href="http://www.google.com/search?q=airgeada%C3%ADocht">Google</a>&nbsp;&nbsp;<a href="http://borel.slu.edu/cgi-bin/aimsigh.cgi?ionchur=airgeada%C3%ADocht&feicthe=0&claochlu=YY">aimsigh.com</a><br>
 </p>
 <p>
 Stemmed searching has a mixed reputation in information retrieval circles,
@@ -177,7 +196,7 @@ Irish Gaelic.
 So perhaps, in frustration, you swear off ever using
 any words that happen to coincide with anything from
 any other written language, and decide to search for
-<i>Bunreacht na hÉireann</i> (Constitution of Ireland). 
+<i>"Bunreacht na hÉireann"</i> (Constitution of Ireland). 
 As it turns out, the first seven hits on Google point
 to English documents!
 A related (but obviously less important) issue is the irritation
@@ -220,17 +239,19 @@ widely available, messages sent to popular email discussion
 lists like
 <a href="https://listserv.heanet.ie/gaelic-l.html">GAELIC-L</a>
 were written with the infamous <i>slaiseanna</i>
-to indicate the accents: <tt>u/rsce/alai/</tt> = <i>úrscéalaí</i> (novelist).
+to indicate the accents: <tt>u/rsce/alai/</tt> = <i>úrscéalaí</i> (novelist)
+or <tt>te/acschomhad</tt> = <i>téacschomhad</i> (text file).
 So, as a consequence, the archives of such mailing lists
 (which form the single largest source
 of Irish language material on the web as of this writing),
 are essentially invisible to standard search engines (which
-would all index the above word as three separate units "u", "rsce", 
-and "alai").
+would all index the above words as separate units "u"+"rsce"+"alai"
+or "te"+"acschomhad").
 In contrast, the <i>aimsigh.com</i> engine automatically detects pages
 that use unusual conventions and converts them to a standard format for
 indexing.  See for yourself:<br><br>
-<b><i>alai rsce u</i></b>: <a href="http://www.google.com/search?q=alai+rsce+u">Google</a>&nbsp;&nbsp;<a href="http://borel.slu.edu/cgi-bin/aimsigh.cgi?ionchur=alai+rsce+u&feicthe=0&claochlu=NN">aimsigh.com</a><br>
+<b><i>acschomhad te ar</i></b>: <a href="http://www.google.com/search?q=acschomhad+te+ar">Google</a>&nbsp;&nbsp;<a href="http://borel.slu.edu/cgi-bin/aimsigh.cgi?ionchur=acschomhad+te+ar&feicthe=0&claochlu=NN">aimsigh.com</a><br>
+<b><i>"ar téacschomhad"</i></b>: <a href="http://www.google.com/search?q=%22ar+t%C3%A9acschomhad%22">Google</a>&nbsp;&nbsp;<a href="http://borel.slu.edu/cgi-bin/aimsigh.cgi?ionchur=%22ar+t%C3%A9acschomhad%22&feicthe=0&claochlu=NN">aimsigh.com</a><br>
 </p>
 <p>
 <b>6. Decapitalization according to Irish conventions</b><br>
