cs.slu.edu -> kevinscannell.com

--- a/eolas-nua.html
+++ b/eolas-nua.html
@@ -74,9 +74,7 @@ with mappings to standardized forms.  These rules are augmented
 with a large database of non-standard/standard word pairs that was extracted in
 part from a parallel corpus of
 English and Irish texts (read more about this here:
-<a target="_blank" href="https://cs.slu.edu/~scannell/pub/ccgb.pdf">Applications of
-parallel corpora to the development of monolingual
-language technologies</a>).
+<a target="_blank" href="https://kevinscannell.com/files/ccgb.pdf">Applications of parallel corpora to the development of monolingual language technologies</a>).
 The end result is that if a user selects the box
 <i>Litriú neamhchaighdeánach</i> (Non-standard spelling)
 on the main <i>aimsigh.com</i> page, and enters in word like
